# chatbot_openai_ollama

./: app.py  chatbot_ollama.py  main.py  pyproject.toml  requirements.txt
